# dongguk_robotics_project25

install/: setup.bash  setup.ps1  setup.sh  setup.zsh
install/robotics_interfaces/share/robotics_interfaces/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robotics_proj/lib/robotics_proj/: control_ready  motor_ready  test_control
install/robotics_proj/share/robotics_proj/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/test_robotics_proj/lib/test_robotics_proj/: Task_1  copy_motor_ready  data_hub  inverse_kinematics  motor_executor  motor_executor_client  motor_executor_server  motor_ready  trajectory_planner
log/: latest_build
src/robotics_interfaces/: CMakeLists.txt  package.xml
src/robotics_interfaces/msg/: Trajectory_msg.msg  ik_msg.msg
src/robotics_interfaces/srv/: MotorExecutor.srv
src/robotics_proj/: setup.cfg  setup.py
src/robotics_proj/robotics_proj/: control_node.py  motor_ready.py
src/test_robotics_proj/: package.xml  setup.cfg  setup.py
src/test_robotics_proj/test_robotics_proj/: AX_motor_ready.py  Inverse_Kinematics copy.py  Inverse_Kinematics.py  Trajectory_Planner.py  data_hub.py  inverse_kinematics.py  motor_executor.py  motor_executor_client.py  motor_executor_server.py  motor_ready copy.py  motor_ready.py  sibalcode.py  test.py  trajectory_planner.py
test_directory/: IK_test.py  Inverse_Kinematics copy.py  Inverse_Kinematics.py  Trajectory_Planner.py  improve_test.py  test.py  trajectory_planner.py
(+55 files in other folders)
