<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotics_interfaces</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <license>TODO: License declaration</license>

  <!-- 빌드 도구 종속성 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 빌드 종속성 -->
  <build_depend>rosidl_default_generators</build_depend>
  
  <!-- 빌드 내보내기 종속성 -->
  <build_export_depend>rosidl_default_runtime</build_export_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- 테스트 종속성 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
